chore(config): add requirements and tox.ini

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,24 @@
-*.pyc
-*.idea
+.DS_Store
+.idea
+.vscode
+*.db
+*.gv
+*.gv.png
+*.gv.svg
+*.gz
+*.ipynb
 *.log
-*.log.*
-*.html
+*.pyc
+*.whl
+*.ttc
+*~
+*/dj_test*
+*/*/dj_test*
+*/*/*/dj_test*
+*/*retry
+*/*/*retry
+frpc
+msc
+dump.rdb
+node_modules
+.tox
