--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,19 @@
-numpy
-pandas
-plotly
-
-TA-Lib
+certifi==2018.4.16
+chardet==3.0.4
+decorator==4.3.0
+idna==2.7
+ipython-genutils==0.2.0
+jsonschema==2.6.0
+jupyter-core==4.4.0
+nbformat==4.4.0
+numpy==1.14.5
+pandas==0.23.3
+plotly==3.0.0
+python-dateutil==2.7.3
+pytz==2018.5
+requests==2.19.1
+retrying==1.3.3
+six==1.11.0
+TA-Lib==0.4.17
+traitlets==4.3.2
+urllib3==1.23
